# modelmirror

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.dev.yml
src/modelmirror/: mirror.py  reflections.py
src/modelmirror/cache/: mirror_cache.py
tests/: test_class_isolation.py  test_comprehensive_integration.py  test_fast_api.py  test_fastapi_default_handling.py  test_inline_creation.py  test_json_configurations.py  test_json_edge_cases.py  test_json_validation.py  test_mirror_customization.py  test_mirror_singleton_caching.py  test_mirror_state_management.py  test_state_isolation.py  test_thread_safety.py  test_type_resolution.py  test_validation_service.py  test_validation_service_basic.py  test_validation_service_dataclass.py  test_validation_service_hierarchy.py  test_validation_service_integration.py  test_verification_success.py
tests/configs/: case_sensitive.json  complex_nested.json  deep_structure.json  empty_strings.json  extra_fields.json  fastapi_lifespan.json  large_array.json  long_strings.json  missing_registry.json  numeric_singleton.json  unicode_test.json  valid_numeric_singleton.json  with_comments.json
tests/fixtures/: class_registers.py  fastapi_registers.py  test_classes.py  test_classes_with_types.py  test_factory_classes.py  validation_fixtures.py
tests/injection/: test.py  testBaseModel.json  testConfig.json  testConfigProp.json  test_class_register.py  test_compose.py  test_injector_based_config.py  test_json_utils.py  test_pydantic.py
(+23 files in other folders)
