[project]
name = "modelmirror"
version = "0.1.6"
description = "Model Mirror"
author = "lorenzo.bretto@enyr.eu"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
license = "MIT"

[dependency-groups]
dev = [
    "pre-commit>=4.4.0"
]

publish = [
    "build>=1.3.0",
    "twine>=6.2.0"
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
